--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Your Name</title>
-  </head>
-  <body>
-   
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Bryant Monahan</title>
+</head>
+
+<body>
+  <nav>
+    <p>Bryant Monahan</p>
+    <a href="index.html">
+      <p>About Bryant</p>
+    </a>
+  </nav>
+  <h1>Bryant Monahan</h1>
+  <p>2692 Harrington Dr &bull; (404) 988-5858 &bull; bryantmonahan@gmail.com</p>
+  <p>A Computer Science student interested in software development. Planing on making cool things and hoping to
+    get paid for it.</p>
+  <hr>
+  <section class="one-col">
+    <form action="https://formsubmit.co/el/rofeje" method="post" class="one-col">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="name" required>
+      <label for="email">Email:</label>
+      <input type="email" name="email" id="email" placeholder="email address" required>
+      <label for="message">Message:</label>
+      <textarea name="message" id="message"></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
+  <footer>&copy; <a href="index.html">Bryant Monahan</a><a href="https://www.linkedin.com/in/BryantMonahan"
+      target="_blank"><i class="fa-brands fa-linkedin"></i></a></footer>
+</body>
+
 </html>
