--- a/index.html
+++ b/index.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Your Name</title>
-  </head>
-  <body>
-   
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Bryant Monahan</title>
+  <script src="https://kit.fontawesome.com/ba51857e96.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <nav>
+    <p>Bryant Monahan</p>
+    <a href="contact.html">
+      <p>Contact Bryant</p>
+    </a>
+  </nav>
+  <header>
+    <h1>Bryant Monahan</h1>
+    <img src="images/headshot.png" alt="Headshot of Bryant" width="100" height="100">
+  </header>
+  <p class="address">2692 Harrington Dr &bull; (404) 988-5858 &bull; bryantmonahan@gmail.com</p>
+  <p class="tagline">A Computer Science student interested in software development. Planing on making cool things and
+    hoping to
+    get paid for it.</p>
+  <hr>
+  <section>
+    <h2>Education</h2>
+    <dl>
+      <dt>University of Georgia</dt>
+      <dd>GPA 3.9</dd>
+      <dt>Computer Science</dt>
+      <dd>December 2026</dd>
+    </dl>
+  </section>
+  <section>
+    <h2>Honors and Awards</h2>
+    <dl>
+      <dt>Dean's List</dt>
+      <dd>2023-Present</dd>
+    </dl>
+  </section>
+  <section>
+    <h2>Skills</h2>
+    <ul>
+      <li>Java</li>
+      <li>JavaScript</li>
+      <li>TypeScript</li>
+      <li>HTML/CSS</li>
+      <li>Tailwind</li>
+      <li>Angular</li>
+      <li>MySQL</li>
+      <li>PostgreSQL</li>
+    </ul>
+  </section>
+  <section>
+    <h2>Leadership and Experience</h2>
+    <dl>
+
+      <dt><a href="https://dch.georgia.gov/">Software Engineer Intern</a></dt>
+
+      <dd>May 2025-Present</dd>
+      <dt>Backend Software Developer & Co-Founder</dt>
+      <dd>May 2024-December 2025</dd>
+    </dl>
+  </section>
+  <section>
+    <h2>Projects</h2>
+    <div class="three-col">
+      <div class="card">
+        <h3>Financial Calculator Website - MookaMoney.com</h3>
+        <img src="images/img_avatar.png" alt="project image" width="100" height="100">
+        <ul>
+          <li>Built with HTML/CSS, Javascript, andExpress.js</li>
+          <li>Deployed on AWS</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Schedule Builder Web App</h3>
+        <img src="images/img_avatar.png" alt="project image" width="100" height="100">
+        <ul>
+          <li>Built with Java and Spring Boot</li>
+          <li>Partnered with UGA's School of Computing and other clubs to become the largest computer
+            science-focused club on campus,
+            with over 100 members</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Bus Tracking App</h3>
+        <img src="images/img_avatar.png" alt="project image" width="100" height="100">
+        <ul>
+          <li>Developed a database for an improved bus app using MySQL</li>
+          <li>Identified and solved implementation issues for a buggy API</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <footer>&copy; <a href="contact.html">Bryant Monahan</a><a href="https://www.linkedin.com/in/BryantMonahan"
+      target="_blank"><i class="fa-brands fa-linkedin"></i></a></footer>
+</body>
+
 </html>
